# voice-to-dynamics

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
config/: agents.json  mcp_servers.yaml  pipeline.yaml  settings.py  tts_voices.yaml
docs/: adding_mcp_server.md  architecture.md  schema_guide.md
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts  wop-ui.config.json
frontend/src/: app.css  app.html
frontend/src/lib/: types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
mcp_servers/dataverse/: allowed_tables.yaml  auth.py  client.py  models.py  server.py
openclaw/config/: openclaw.json
schema/: README.md  account.yaml  activity.yaml  contact.yaml  lead.yaml  opportunity.yaml
scripts/: discover_schema.py  run_mcp_server.py  run_voice_session.py
src/agent/: agent.py  intent_models.py  memory.py  openclaw.py  patterns.py  prompt_builder.py  router.py  schema_loader.py  store.py
src/channels/: handler.py  teams.py  telegram.py  voice_acs.py  whatsapp.py
src/mcp/: client.py  registry.py
src/orchestrator/: pipeline.py
src/providers/: factory.py
src/stt/: preprocessor.py
tests/fixtures/: mock_dataverse_responses.json
tests/integration/: test_agent_loop.py  test_dataverse_roundtrip.py
tests/unit/: test_mcp_registry.py  test_mcp_tools.py  test_memory.py  test_openclaw.py  test_preprocessor.py  test_prompt_builder.py  test_router.py  test_schema_loader.py
ui/: app.py
ui/static/: index.html
voice_mcp/: __init__.py  __main__.py
(+163 files in other folders)
